adding more detailles 2