@@ -2,6 +2,7 @@ package com.mouad.train.trains;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
+
 import java.util.List;
 
 @RestController
@@ -31,6 +32,12 @@ public class TrainController {
         if (!trainRepository.findByTrainNameAndTrainType(train.getTrainName(), train.getTrainType()).isEmpty()) {
             throw new RuntimeException("Train with the same name and type already exists");
         }
+
+        // Set default status to "active" if not provided
+        if (train.getStatus() == null || train.getStatus().isEmpty()) {
+            train.setStatus("active");
+        }
+
         return trainRepository.save(train);
     }
 
@@ -42,14 +49,14 @@ public class TrainController {
 
         // Check if updating the train results in a duplicate
         List<Train> existingTrains = trainRepository.findByTrainNameAndTrainType(updatedTrain.getTrainName(), updatedTrain.getTrainType());
-        if (!existingTrains.isEmpty() && !existingTrains.get(0).getId().equals(id)) {
+        if (!existingTrains.isEmpty() && !existingTrains.getFirst().getId().equals(id)) {
             throw new RuntimeException("Another train with the same name and type already exists");
         }
 
         train.setTrainName(updatedTrain.getTrainName());
         train.setTrainType(updatedTrain.getTrainType());
         train.setCapacity(updatedTrain.getCapacity());
-        train.setActive(updatedTrain.getActive());
+        train.setStatus(updatedTrain.getStatus());
         return trainRepository.save(train);
     }
 
@@ -57,5 +64,21 @@ public class TrainController {
     @DeleteMapping("/{id}")
     public void deleteTrain(@PathVariable Integer id) {
         trainRepository.deleteById(id);
+    }
+
+    // Get all active trains
+    @GetMapping("/active")
+    public List<Train> getActiveTrains() {
+        return trainRepository.findByStatus("active");
+    }
+
+    // Change train status
+    @PutMapping("/{id}/status")
+    public Train changeTrainStatus(@PathVariable Integer id, @RequestParam String status) {
+        Train train = trainRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Train not found"));
+
+        train.setStatus(status);
+        return trainRepository.save(train);
     }
 }
